# Text-to-Layout

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .zenodo.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLEAN_ROOM_VERIFICATION.md  CONTRIBUTING.md  CURRENT_STATUS.md  EXTERNAL_BACKEND_INTEGRATION_STATUS.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  PHYSICS_COMPILER_STATUS.md  PHYSICS_VALIDATION_REPORT.md  PROJECT_AUDIT.md  PROJECT_STATUS.md  README.md  REFERENCES.md  REVIEW_REPORT.md  SIGNOFF_CRITERIA.md  SOLVER_EVIDENCE_CONTRACT.md  SOP.md  TASKS.md  THIRD_PARTY_NOTICES.md  TOY_PATH_AUDIT.md  Text-to-GDS_Academic_Industrial_Validation_Roadmap.md  TopTask.md  compose.yaml  docker-bake.hcl  mkdocs.yml  physics_methods.yaml  process.yaml  process_reference.json  pyproject.toml  (+1 more)
.claude-plugin/: marketplace.json
.codex/: config.toml
.codex-plugin/: marketplace.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: benchmark.yml  bug.yml
.github/workflows/: ci.yml  klayout-signoff.yml  nightly.yml  palace-integration.yml  release.yml  test.yml
assets/: fabrication_real_cpw_resonator.gds  fabrication_real_cpw_resonator.sidecar.json  fabrication_real_dc_squid.gds  fabrication_real_dc_squid.sidecar.json
benchmarks/: 01-manhattan-josephson-junction.md  02-compact-cmos-logic-cell.md  03-sfq-pulse-splitter.md  04-jj-ic-calibration-array.md  05-cpw-resonator-test.md  06-via-chain-monitor.md
dataset/sequences/: example_cpw_resonator.supercad  example_lumped_jpa.supercad  example_manhattan_jj.supercad
docker/: Dockerfile.full  Dockerfile.minimal  Dockerfile.research  README.md  core.Dockerfile  josephson.Dockerfile  josim.Dockerfile  klayout.Dockerfile  openems.Dockerfile  palace.Dockerfile  paraview.Dockerfile  simulators.Dockerfile  solver-full.Dockerfile
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  BRANCH_INVENTORY.md  PROGRESS.md  RELEASE_CONSISTENCY_REVIEW.md  WHOLE_PROJECT_REVIEW.md  api.md  epr_coherence.md  evidence_consistency_baseline.json  evidence_consistency_baseline.md  evidence_model.md  function_parity.md  improvement_registries.md  klayout_drc.md  lessons_from_text_to_cad.md  measurement_calibration.md  open_platform_roadmap.md  openapi.example.json  openapi_usage.md  opensource_em_solvers.md  palace_baseline.md  palace_execution_baseline.md  palace_next_generation_validation_report.md  pdk_abstraction.md  plugin_design.md  plugin_manifest.example.json  pyaedt_hfss_q3d.md  pyepr_hfss_integration.md  research_integrations.md  signoff_levels.md  simulation_tools.md  tool_api.md  ui_ux_workflow.md
docs/baselines/: 936d074_failure_inventory.md  palace_v017_57c35e6.md
docs/install/: palace.md
docs/legacy/: ARCHITECTURE_text_to_gds.md
docs/simulators/: install.md  licenses.md
docs/troubleshooting/: palace.md
drc/: placeholder.drc  superconducting_min_width.drc
examples/: 01_full_pipeline_jj.py  02_kqcircuits_cpw_resonator.py  03_scqubits_transmon_spectrum.py  04_jpa_gain_josephsoncircuits.py  05_backend_status_and_provenance.py  Text_to_GDS_Colab.ipynb  cpw_50ohm_future.json  demo_B_full_extraction.py  demo_C_simulation_solvers.py  demo_D_review_and_signoff.py  demo_E_full_pipeline_100.py  design_requests.md  example_output.md  idc_0p6pf.json  phase8_tutorial.py  real_cqed_loop.py  run_function_demo.py  zero_to_one_demos.py
examples/acceptance/: README.md
examples/chip_lattices/: 40_qubit_grid.json  40q_synthetic.yaml
examples/measurement_fixtures/: measurements.json  measurements_synthetic.csv  measurements_synthetic.json  predictions_synthetic.json
examples/output/: README.md  idc.gds
examples/showcase/: index.json
external_tools/: lock.toml  registry.toml
external_tools/gmsh/: manifest.json
measurements/: compression.py
process/: IBM_Nb.yaml  NCU_AlOx_2026.yaml  aluminum_jj.yaml
reference_library/: devices.json  index.json
scripts/: audit_evidence_consistency.py  bootstrap_simulators.py  build_canonical_evidence.py  build_palace_benchmark_evidence.py  bundle_plugin.py  check_benchmarks.py  check_external_tools.py  check_namespace_boundary.py  check_palace_amr_benchmark.py  check_project_claims.py  check_readme_claims.py  check_simulators.py  check_solver_stack.py  compare_with_kqcircuits.py  compare_with_qiskit_metal.py  generate_acceptance.py  generate_assets.py  generate_audit_artifacts.py  generate_benchmarks.py  generate_klayout_drc_fixtures.py  generate_klayout_image_evidence.py  generate_klayout_lvs_fixtures.py  generate_project_status.py  generate_readme_palace_benchmark.py  generate_showcase_examples.py  generate_syft_sbom.py  install_julia_packages.jl  install_openems_wsl.sh  install_palace_wsl.sh  install_pscan2.py  install_simulators.sh  install_wrspice.py  magic_wsl.py  promote_palace_v017.py  publish_palace_v017_benchmark.py  quick_validate.py  render_reports.py  render_showcase_artifacts.py  run_benchmarks.py  run_containerized_klayout_drc.py  (+7 more)
simulation/: README.md  q3d_workflow.md  sonnet_workflow.md
src/text_to_gds/: cli.py  (+66 more)
tests/: test_ai_copilot.py  test_backend_orchestration.py  test_candidate_loop.py  test_closed_loop.py  test_cpw_boolean_gap.py  test_cpw_matches_reference.py  test_device_views.py  test_eda_framework_architecture.py  test_em_solvers.py  test_fitting.py  test_fourth_wave.py  test_improvements.py  test_jj_boolean_overlap.py  test_jj_stack_matches_reference.py  test_jpa_matches_literature.py  test_jpa_topology.py  test_layout_backend.py  test_layout_quality_modes.py  test_layout_validator.py  test_new_modules.py  test_next_improvements.py  test_no_fake_gain.py  test_no_toy_layouts.py  test_open_solver.py  test_openems_real_s2p.py  test_opensource_em.py  test_packaging.py  test_paper_benchmarks.py  test_pdk.py  test_phase1_phase2.py  test_phase456.py  test_phase8_foundations.py  test_phase8_operations.py  test_phases_1_10.py  test_physics_benchmark.py  test_physics_compiler.py  test_physics_compiler_loop.py  test_physics_engine.py  test_physics_first_pipeline.py  test_physics_grounded_compiler_contract.py  (+23 more)
text-to-gds/: TASKS.md
(+1589 files in other folders)
