[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "text-to-gds"
version = "0.3.0"
description = "Local-first evidence-driven cQED layout and simulation platform. The `textlayout` package (CLI: textlayout) is the supported product path: NL prompt -> typed DSL -> verified GDS -> EPR/coherence -> JJ yield -> chip-collision analysis -> measurement calibration. `text_to_gds` (CLI: text-to-gds) is a frozen legacy MCP-tool surface, kept for compatibility only -- see ARCHITECTURE.md."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Text-to-GDS contributors" }]
dependencies = [
  "gdsfactory>=8.0",
  "klayout>=0.29",
  "langgraph>=0.2",
  "matplotlib>=3.9",
  "mcp[cli]>=1.2.0",
  "numpy>=1.26",
  "pillow>=10.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "trimesh>=4.0",
  "fastapi>=0.110",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
# Clarity groups for the textlayout product (installable as `pip install -e ".[name]"`).
# These do not change the clean-room core install.
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11", "pytest-cov>=5.0"]
api = ["fastapi>=0.110", "uvicorn>=0.30"]  # also in core deps; named for clarity
solvers = ["scikit-rf>=1.0"]  # open-source Touchstone / S-parameter post-processing
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

layout = ["kqcircuits", "qiskit-metal"]
optimization = ["optuna>=4.0"]
rf = ["scikit-rf>=1.0"]
squid = []  # JoSIM is an optional external executable; no Python package is vendored.
measurement = ["qcodes>=0.50"]
quantum = ["scqubits>=4.0"]
metal = ["qiskit-metal"]
epr = ["pyEPR-quantum"]
hfss = ["pyaedt>=1.1"]
mesh = ["gmsh>=4.11", "meshio>=5.3"]
research = [
  "kqcircuits",
  "optuna>=4.0",
  "qiskit-metal",
  "scikit-rf>=1.0",
  "qcodes>=0.50",
  "scqubits>=4.0",
  "pyEPR-quantum",
  "pyaedt>=1.1",
  "gmsh>=4.11",
]

[project.urls]
Repository = "https://github.com/JungluChen/Text-to-Layout"
Issues = "https://github.com/JungluChen/Text-to-Layout/issues"

[project.scripts]
textlayout = "textlayout.cli:main"
text-to-gds = "text_to_gds.server:main"
text-to-gds-simulation = "text_to_gds.cli:text_to_gds_simulation"
text-to-gds-circuit-design = "text_to_gds.cli:text_to_gds_circuit_design"
text-to-gds-layout-design = "text_to_gds.cli:text_to_gds_layout_design"
text-to-gds-signoff = "text_to_gds.cli:text_to_gds_signoff"
text-to-gds-physics-signoff = "text_to_gds.cli:text_to_gds_physics_signoff"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest-cov>=5.0",
]

# textlayout generator plugins are discovered via this entry-point group.
# Third parties add devices by shipping a package that advertises one here —
# no change to this repository is required (Open/Closed).
[project.entry-points."textlayout.generators"]
IDC = "textlayout.generators.idc:IDCGenerator"
CPW = "textlayout.generators.cpw:CPWGenerator"
SpiralInductor = "textlayout.generators.spiral:SpiralInductorGenerator"
QuarterWaveResonator = "textlayout.generators.resonator:QuarterWaveResonatorGenerator"
SQUID = "textlayout.generators.squid:SQUIDGenerator"
TestStructure = "textlayout.generators.test_structure:TestStructureGenerator"
TestChip = "textlayout.generators.test_chip:TestChipGenerator"

[tool.hatch.build.targets.wheel]
packages = ["src/text_to_gds", "src/textlayout"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "quantum-eda-stack",
  # The quality gate follows the strangler boundary: new product code and its
  # tests are under src/textlayout + tests/textlayout_suite. Legacy mirrors and
  # compatibility scripts are intentionally not reformatted by modern work.
  "src/text_to_gds",
  "plugins",
  "examples",
  "measurements",
  "scripts",
  "simulation",
  "tests/test_*.py",
]

# Strict static typing is enforced on the new clean-architecture package only.
# The legacy text_to_gds package is migrated module-by-module (strangler-fig);
# it is not yet type-clean, so we do not gate on it.
[tool.mypy]
files = ["src/textlayout"]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# skrf ships no py.typed marker, and is an optional extra: depending on the
# environment the import is either untyped or missing entirely. One override
# covers both, so no inline ignore has to guess which.
module = ["gdsfactory.*", "uvicorn.*", "skrf.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["textlayout"]
branch = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".tools",
  ".venv",
  "external_references",
  "external_repos",
  "plugins",
  "workspace",
]
